# HueSyncStudio

./: .gitignore  .gitmodules  ANALYSIS_REPORT.md  CMakeLists.txt  LICENSE  Project-Instruction.md  README.md  WORKFLOW_FIX_DOCUMENTATION.md  WORKFLOW_QUICKSTART.md  WORKFLOW_SUMMARY.md  fix_report.md  technische-erweiterungen.md  ui-optimierung.md  vcpkg.json  vcpkg_Version.json  vcpkg_Version2.json
.github/scripts/: check_vcpkg.ps1
.github/workflows/: build-and-release.yml  build_and_release.yml  ci.yml
libs/kissfft/: CMakeLists.txt
resources/: default_config.json
src/: CMakeLists.txt  main.cpp
src/core/: AudioAnalyzer.cpp  AudioAnalyzer.h  ColorGroupEditor.cpp  ColorGroupEditor.h  ConfigManager.cpp  ConfigManager.h  EffectEngine.cpp  EffectEngine.h  HueBridge.cpp  HueBridge.h  JsonSerializers.h  Lamp.h  LampGroupManager.cpp  LampGroupManager.h  Logger.cpp  Logger.h  MultiBridgeManager.cpp  MultiBridgeManager.h  PresetManager.cpp  PresetManager.h  WebSocketServer.cpp  WebSocketServer.h
src/core/effects/: ColorFlowEffect.cpp  ColorFlowEffect.h  Effect.h  PulseEffect.cpp  PulseEffect.h  SpectrumEffect.cpp  SpectrumEffect.h
src/ui/: AppWindow.qml  AudioDataModel.cpp  AudioDataModel.h  AudioView.qml  EffectPanel.qml  LampMap.qml  LampModel.cpp  LampModel.h  resources.qrc
tests/: CMakeLists.txt  test_audio.cpp  test_bridge.cpp  test_color_editor.cpp  test_config.cpp  test_effects.cpp  test_lamp_manager.cpp  test_presets.cpp  test_websocket.cpp
